tests/ui/union/access_union_field.stderr
error[E0133]: access to union field is unsafe and requires unsafe function or block
  --> $DIR/access_union_field.rs:10:13
   |
LL |     let a = foo.bar;
   |             ^^^^^^^ access to union field
   |
   = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error[E0133]: access to union field is unsafe and requires unsafe function or block
  --> $DIR/access_union_field.rs:11:13
   |
LL |     let b = foo.baz;
   |             ^^^^^^^ access to union field
   |
   = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
